@@ -1,3 +1,4 @@
+import os
 import macpath
 from test import test_support
 import unittest
@@ -7,6 +8,22 @@ class MacPathTestCase(unittest.TestCase):
 
     def test_abspath(self):
         self.assert_(macpath.abspath("xx:yy") == "xx:yy")
+
+        # Issue 3426: check that abspath retuns unicode when the arg is unicode
+        # and str when it's str, with both ASCII and non-ASCII cwds
+        saved_cwd = os.getcwd()
+        for cwd in (u'cwd', u'\xe7w\xf0'):
+            try:
+                os.mkdir(cwd)
+                os.chdir(cwd)
+                for path in ('', 'foo', 'f\xf2\xf2', '/foo', 'C:\\'):
+                    self.assertTrue(isinstance(macpath.abspath(path), str))
+                for upath in (u'', u'fuu', u'f\xf9\xf9', u'/fuu', u'U:\\'):
+                    self.assertTrue(isinstance(macpath.abspath(upath), unicode))
+            finally:
+                os.chdir(saved_cwd)
+                os.rmdir(cwd)
+
 
     def test_isabs(self):
         isabs = macpath.isabs
